--- a/appsettings.json
+++ b/appsettings.json
@@ -1745,6 +1745,16 @@
                   },
                   {
                     "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
                     "FromProperty": "Date",
                     "ToProperty": "Date"
                   }
@@ -5206,6 +5216,16 @@
                     "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
                     "FromProperty": "Date",
                     "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4EBF-91A6-D4B2E52341B7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
                   }
                 ]
               },
@@ -5423,6 +5443,16 @@
                     "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                     "FromProperty": "Date",
                     "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "NumeroPallet",
+                    "ToProperty": "NumeroPallet"
                   }
                 ]
               },
