--- a/appsettings.json
+++ b/appsettings.json
@@ -1067,7 +1067,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/BK.jpg"
+                    "Value": "./cartellinoimages/no-foto.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -1522,7 +1522,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/WestRock.jpg"
+                    "Value": "./cartellinoimages/WRA_Westrock_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -1718,7 +1718,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "FornitoreId",
-                    "Value": "WCC"
+                    "Value": "WRC"
                   },
                   {
                     "Name": "IsLocalStorage",
@@ -1779,7 +1779,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/no-foto.jpg"
+                    "Value": "./cartellinoimages/WRC_Westrock_Tuque_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -1975,7 +1975,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/cardella.jpg"
+                    "Value": "./cartellinoimages/CA_Cardella_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -2236,7 +2236,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/PCA.jpg"
+                    "Value": "./cartellinoimages/PCA_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -2433,7 +2433,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/PCA.jpg"
+                    "Value": "./cartellinoimages/no-foto.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -2890,7 +2890,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/CartieraGiorgione.jpg"
+                    "Value": "./cartellinoimages/CG_Cartiera_Giorgione_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -3151,7 +3151,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/Leipa.jpg"
+                    "Value": "./cartellinoimages/LP_Leipa_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -3412,7 +3412,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/Storaenso_V1.jpg"
+                    "Value": "./cartellinoimages/ST_Storaenso_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -3936,7 +3936,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/ND.jpg"
+                    "Value": "./cartellinoimages/ND_NdPaper_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -4657,7 +4657,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/ND.jpg"
+                    "Value": "./cartellinoimages/ND_NdPaper_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
@@ -4854,7 +4854,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/no-foto.jpg"
+                    "Value": "./cartellinoimages/DSF_Ds_Smith_Francia_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
