--- a/appsettings.json
+++ b/appsettings.json
@@ -306,7 +306,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -362,7 +362,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -563,7 +563,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -619,7 +619,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -820,7 +820,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -875,7 +875,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1080,7 +1080,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1276,7 +1276,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1331,7 +1331,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1535,7 +1535,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1590,7 +1590,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "QrCodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -1792,7 +1792,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -1988,7 +1988,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2043,7 +2043,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2249,7 +2249,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2446,7 +2446,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2642,7 +2642,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2697,7 +2697,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2903,7 +2903,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -2958,7 +2958,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3164,7 +3164,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3219,7 +3219,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3425,7 +3425,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3480,7 +3480,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3687,7 +3687,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3742,7 +3742,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -3949,7 +3949,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4146,7 +4146,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4201,7 +4201,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4408,7 +4408,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4463,7 +4463,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4670,7 +4670,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -4867,7 +4867,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -5064,7 +5064,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -5260,7 +5260,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [],
                 "ComponentParameters": [
@@ -5457,7 +5457,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -5665,7 +5665,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Primo Barcode",
+                "Title": "1. Lettura Roll Number",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
@@ -5721,7 +5721,7 @@
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
                 "Name": "BarcodeComponent",
-                "Title": "Lettura Secondo Barcode",
+                "Title": "2. Lettura Roll Data",
                 "Description": "Maschera di gestione Barcode",
                 "Defaults": [
                 ],
