--- a/appsettings.json
+++ b/appsettings.json
@@ -212,6 +212,14 @@
                   "Icon": "PeopleOutline"
                 },
                 {
+                  "Name": "(HC) Hood Container",
+                  "Description": "Hood Container",
+                  "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                  "Sigla": "HC",
+                  "BarcodeLength": 13,
+                  "Icon": "PestControl"
+                },
+                {
                   "Name": "(XX) Cartiera Non Codificata",
                   "Description": "Cartiera Non Codificata",
                   "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
@@ -5180,6 +5188,203 @@
 
           },
           {
+            "Id": "80E48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "HC"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "80B48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "80C48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/HC_Hood_Container.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1"
+                  }
+                ]
+              },
+              {
+                "Id": "80D48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "1. Lettura Roll Number",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 13
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "80E48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "80A48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "80B48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "80B48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "80B48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "80D48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+                    "FromId": "80D48F6B-CDC8-47EE-96C0-41B6F473E7Z2",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  }
+                ]
+              }
+
+
+            ]
+
+
+          },
+          {
             "Id": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
             "Title": "Maschera di Lettura Barcode",
             "Components": [
@@ -5648,7 +5853,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "Foto",
-                    "Value": "./cartellinoimages/no-foto.jpg"
+                    "Value": "./cartellinoimages/IP_International_Paper_Evo.jpg"
                   },
                   {
                     "Name": "Istruzioni",
