--- a/appsettings.json
+++ b/appsettings.json
@@ -6275,18 +6275,17 @@
                 ]
               },
               {
-                "Id": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A8",
+                "Id": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
-                "Name": "BarcodeComponent",
-                "Title": "1. Lettura Roll Number",
+                "Name": "QrCodeComponent",
+                "Title": "1. Lettura Qr Code",
                 "Description": "Maschera di gestione Barcode",
-                "Defaults": [
-                ],
+                "Defaults": [],
                 "ComponentParameters": [
                   {
                     "Name": "Type",
-                    "Value": "SerialNumber"
+                    "Value": "QrCode"
                   },
                   {
                     "Name": "Immediate",
@@ -6294,15 +6293,15 @@
                   },
                   {
                     "Name": "InputMaxCharacters",
-                    "Value": 50
+                    "Value": 1000
                   },
                   {
-                    "Name": "BarcodeLength",
-                    "Value": 20
+                    "Name": "MaxLines",
+                    "Value": 1
                   },
                   {
                     "Name": "RegexExpression",
-                    "Value": null
+                    "Value": "00|02|11|37|10"
                   },
                   {
                     "Name": "HelperText",
@@ -6319,65 +6318,14 @@
                 ],
                 "DtoParameters": [
                   {
-                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                     "FromProperty": "IsCamera",
                     "ToProperty": "IsCamera"
                   },
                   {
-                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                     "FromProperty": "IsBarcodeReader",
                     "ToProperty": "IsBarcodeReader"
-                  }
-                ]
-              },
-              {
-                "Id": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A6",
-                "Assembly": "Blazor.WizardComponent.Client",
-                "Namespace": "Blazor.WizardComponent.Client.Components",
-                "Name": "BarcodeComponent",
-                "Title": "2. Lettura Roll Data",
-                "Description": "Maschera di gestione Barcode",
-                "Defaults": [
-                ],
-                "ComponentParameters": [
-                  {
-                    "Name": "Type",
-                    "Value": "Info"
-                  },
-                  {
-                    "Name": "Immediate",
-                    "Value": false
-                  },
-                  {
-                    "Name": "InputMaxCharacters",
-                    "Value": 50
-                  },
-                  {
-                    "Name": "BarcodeLength",
-                    "Value": 0
-                  },
-                  {
-                    "Name": "RegexExpression",
-                    "Value": "^02"
-                  },
-                  {
-                    "Name": "HelperText",
-                    "Value": "In caso di inserimento manuale confermare con Enter"
-                  },
-                  {
-                    "Name": "IsLocalStorage",
-                    "Value": true
-                  },
-                  {
-                    "Name": "DebounceInterval",
-                    "Value": 0
-                  }
-                ],
-                "DtoParameters": [
-                  {
-                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
-                    "FromProperty": "IsCamera",
-                    "ToProperty": "IsCamera"
                   }
                 ]
               },
@@ -6428,25 +6376,15 @@
                   },
                   {
 
-                    "FromId": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A8",
+                    "FromId": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
                     "FromProperty": "Barcode",
                     "ToProperty": "PrimoBarcode"
                   },
                   {
-                    "FromId": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A6",
-                    "FromProperty": "Barcode",
-                    "ToProperty": "SecondoBarcode"
-                  },
-                  {
 
-                    "FromId": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A8",
+                    "FromId": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
                     "FromProperty": "Type",
                     "ToProperty": "PrimoBarcodeType"
-                  },
-                  {
-                    "FromId": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341A6",
-                    "FromProperty": "Type",
-                    "ToProperty": "SecondoBarcodeType"
                   }
                 ]
               }
