--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,9 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Parameters": {
+    "Host": "https://ymicqcp2axww2gfaqqlffjthe40sieiu.lambda-url.eu-north-1.on.aws/",
     "Host1": "https://zxzw6stelkr2o2jemu2zwy4hiy0acdkq.lambda-url.eu-north-1.on.aws",
-    "Host": "http://localhost",
+    "Host2": "http://localhost",
     "Port": 5084
   },
   "Infrastruttures": {
